<resources>
    <string name="app_name">Objectif Sport</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_sport">Add sport</string>
    <string name="sport_name">Sport name</string>
    <string name="activities_amount">Activities amount :</string>
    <string name="six_number">6</string>
    <string name="goals_achieved">Goals achieved</string>
    <string name="time_goal">Time goal</string>
    <string name="distance_goal">Distance Goal</string>
    <string name="cancel">Cancel</string>
    <string name="goals_in_progress">Goals in progress</string>
    <string name="activity_description">Activity description</string>
    <string name="sport">Sport :</string>
    <string name="creation_date">Creation date :</string>
    <string name="activity_status">Activity status :</string>
    <string name="done_not_done">❌✔</string>
    <string name="random_date">15/02/2021</string>
    <string name="add_activity">Add activity</string>
    <string name="back_to_activities_list">back to activities list</string>
    <string name="my_activities">My Activities</string>
    <string name="activity_done">Activity done</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="current_time_recorded">Current time recorded :</string>
    <string name="random_time">01:26 36:89</string>
    <string name="resume">resume</string>
    <string name="no_time_recorded">no time recorded</string>
    <string name="remove">remove</string>
    <string name="reset_time_message">Are you sure you want to delete this entry ?\nSaved time will be reset too !</string>
    <string name="reset_time">Reset time</string>
    <string name="remove_activity_msg">Do you want to remove this activity ?</string>
    <string name="remove_activity">Remove activity</string>
    <string name="remove_sport">Remove sport</string>
    <string name="remove_sport_msg">Do you want to remove this sport ?\nAll associated activities will also be removed.</string>
    <string name="create_sport_before">You should create a sport before !</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoid3JvbmdqdWljZSIsImEiOiJja2xiajk3aHYwZm41MnBzNHpsbWZkZDNlIn0.ehH9r8d1OoVfwB5je_pnGA</string>
    <string name="start_tracking">Start tracking</string>
    <string name="reset_tracking">Reset tracking</string>
    <string name="distance_travelled">Distance travelled :</string>
    <string name="no_distance_travelled">No distance travelled</string>
    <string name="user_location_permission_explanation">Localization authorization needed.</string>
    <string name="user_location_permission_not_granted">You have not granted location authorization.</string>
    <string name="line_distance_tap_instruction">Click in 2 places on the map to draw a line</string>
    <string name="finish">Finish</string>
    <string name="reset_tracking_message">Are you sure you want to reset the tracking ?\nThe recorded data will be deleted.</string>
    <string name="activity_complete">Activity complete</string>
    <string name="activity_unfinished">Activity unfinished</string>
    <string name="distance_unit_m">m</string>
    <string name="distance_unit_km">km</string>
    <string name="goal_description">Goal description</string>
    <string name="goal_status">Goal status :</string>
    <string name="remove_goal">Remove goal</string>
    <string name="remove_goal_msg">Are you sure you want to delete this goal ? All progress will be lost.</string>
    <string name="add_goal">Add goal</string>
    <string name="distance_goal_km">Distance goal (km)</string>
    <string name="deadline">Deadline</string>
    <string name="goal_deadline">Goal deadline</string>
    <string name="time_goal_duration_msg">Please set the duration goal.</string>
    <string name="distance_goal_duration_msg">PLease set a distance goal in kilometers.</string>
    <string name="deadline_goal_duration_msg">Please set the deadline goal date.</string>
    <string name="back_to_goals_list">My Goals</string>
    <string name="my_goals">My Goals</string>
    <string name="goal_not_achieved">Goal not achieved</string>
    <string name="goal_in_progress">Goal in progress</string>
    <string name="goal_achieved">Goal achieved</string>
    <string name="deadline_date">Deadline date :</string>
    <string name="no_deadline_date">No deadline date</string>
    <string name="time_goal_title">Time goal :</string>
    <string name="no_time_goal">No time goal</string>
    <string name="time_reached">Time reached :</string>
    <string name="no_time_reached">No time reached</string>
    <string name="no_time_percentage">No time percentage</string>
    <string name="distance_goal_title">Distance goal :</string>
    <string name="no_distance_goal">No distance goal</string>
    <string name="distance_reached">Distance reached :</string>
    <string name="no_distance_reached">No distance reached</string>
    <string name="completion">Completion percentage :</string>
    <string name="no_distance_percentage">No distance percentage</string>
    <string name="goal_achieved_notification_title">Goal achieved !</string>
    <string name="congratulation">Congratulation !</string>
    <string name="goal_achieved_notification_msg">is now achieved !</string>
</resources>