<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        style="@style/topBack"
        android:onClick="backToMyGoals"
        android:id="@+id/back">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/back_to_goals_list"
            android:id="@+id/back_to_goals_list"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="22sp"
            android:gravity="center"
            android:layout_toEndOf="@+id/back_to_goals_list"
            android:textColor="@color/design_default_color_on_primary"
            android:text="@string/my_goals"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/back">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/goal_in_progress"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@color/in_progress"
            android:textSize="22sp"
            android:textColor="@color/design_default_color_on_primary"
            android:id="@+id/goal_status"/>

        <TextView
            style="@style/textDescription"
            android:text="@string/goal_description"
            android:id="@+id/goal_description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                style="@style/textInformations"
                android:text="@string/sport_name"
                android:id="@+id/sport_name"/>

            <TextView
                style="@style/textInformations"
                android:text="@string/random_date"
                android:id="@+id/creation_date"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:id="@+id/deadline_date_container">

                <TextView
                    style="@style/textInformations"
                    android:textSize="16sp"
                    android:text="@string/deadline_date"/>

                <TextView
                    android:textSize="16sp"
                    style="@style/textInformations"
                    android:text="@string/no_deadline_date"
                    android:id="@+id/deadline_date"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/time_goal_container">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textInformationsCondensed"
                        android:text="@string/time_goal_title"/>

                    <TextView
                        style="@style/textInformationsCondensed"
                        android:text="@string/no_time_goal"
                        android:id="@+id/time_goal"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textInformationsCondensed"
                        android:text="@string/time_reached"/>

                    <TextView
                        style="@style/textInformationsCondensed"
                        android:text="@string/no_time_reached"
                        android:id="@+id/no_time_reached"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textInformationsCondensed"
                        android:text="@string/completion"/>

                    <TextView
                        style="@style/textInformationsCondensed"
                        android:text="@string/no_time_percentage"
                        android:id="@+id/time_percentage"/>

                </LinearLayout>

                <ProgressBar
                    style="@style/classicHorizontalProgressBars"
                    android:id="@+id/time_progress"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/distance_goal_container">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textInformationsCondensed"
                        android:text="@string/distance_goal_title"/>

                    <TextView
                        style="@style/textInformationsCondensed"
                        android:text="@string/no_distance_goal"
                        android:id="@+id/distance_goal"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textInformationsCondensed"
                        android:text="@string/distance_reached"/>

                    <TextView
                        style="@style/textInformationsCondensed"
                        android:text="@string/no_distance_reached"
                        android:id="@+id/distance_reached"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textInformationsCondensed"
                        android:text="@string/completion"/>

                    <TextView
                        style="@style/textInformationsCondensed"
                        android:text="@string/no_distance_percentage"
                        android:id="@+id/distance_percentage"/>

                </LinearLayout>

                <ProgressBar
                    style="@style/classicHorizontalProgressBars"
                    android:id="@+id/distanceProgress"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>