<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        style="@style/itemTitle"
        android:text="@string/sport_name"
        android:id="@+id/sport_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/itemDescriptionText"
            android:text="@string/activities_amount"/>

        <TextView
            style="@style/itemDescriptionText"
            android:text="@string/six_number"
            android:id="@+id/activities_amount"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/itemDescriptionText"
            android:text="@string/goals_in_progress"/>

        <TextView
            style="@style/itemDescriptionText"
            android:text="@string/six_number"
            android:id="@+id/goals_in_progress_amount"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/itemDescriptionText"
            android:text="@string/goals_achieved"/>

        <TextView
            style="@style/itemDescriptionText"
            android:text="@string/six_number"
            android:id="@+id/goals_done_amount"/>

    </LinearLayout>

</LinearLayout>