<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/goal_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="22sp"
        android:textColor="@color/design_default_color_primary"
        android:text="@string/goal_description"
        android:id="@+id/goal_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_margin="5dp"
            android:textColor="@color/dark_grey"
            android:text="@string/sport"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_margin="5dp"
            android:textColor="@color/dark_grey"
            android:text="@string/sport_name"
            android:id="@+id/sport_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_margin="5dp"
            android:textColor="@color/dark_grey"
            android:text="@string/creation_date"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_margin="5dp"
            android:textColor="@color/dark_grey"
            android:text="@string/random_date"
            android:id="@+id/creation_date"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_margin="5dp"
            android:textColor="@color/dark_grey"
            android:text="@string/goal_status"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_margin="5dp"
            android:textColor="@color/dark_grey"
            android:text="@string/done_not_done"
            android:id="@+id/goal_status"/>

    </LinearLayout>

</LinearLayout>